--- a/index.html
+++ b/index.html
@@ -9,16 +9,23 @@
 <body>
 
     <h1> My Dogs </h1>
-
-    <h2> Kenzo </h2>
+    <main>
+    <article>
+        <h2> Kenzo </h2>
         <img src="/Fotos/Kenzo.jpg" alt="Kenzo the Labrador">
+    </article>
 
-    <h2> Obi </h2>
+    <article>
+        <h2> Obi </h2>
         <img src="/Fotos/Obi.jpg" alt="Obi the Shetland Sheepdog">
+    </article>
 
-    <h2> Viggo</h2>
+    <article>
+        <h2> Viggo</h2>
         <img src="/Fotos/Viggo.jpg" alt="Viggo the Border Collie">
+    </article>
 
+</main>
 
 </body>
 </html>
